syntax = "proto3";

package lobby.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/itsuabush1003/cursed-frame/backend/golang/internal/gen/lobby/v1;lobbyv1";

message LobbyStatus {
  bool is_all_ready = 1;
}

message RegistProfileRequest {
  uint32 question_id = 1;
  string answer = 2;
}

message RegistProfileResponse {
  uint32 next_question_id = 1;
  string next_question_text = 2;
  bool no_more_answer = 3;
}

message GetTeamIDResponse {
  uint32 team_id = 1;
  string team_name = 2;
}

service LobbyService {
  rpc JoinLobby(google.protobuf.Empty) returns (stream LobbyStatus);
  rpc RegistProfile(RegistProfileRequest) returns (RegistProfileResponse);
  rpc IsReady(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc GetTeamID(google.protobuf.Empty) returns (GetTeamIDResponse);
}
